实现定时任务添加接口
